# ai-news

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
ai-news/: main.py  poc.py  pyproject.toml
ai-server/: Dockerfile  main.py  pyproject.toml  requirements.txt
